# tubeskds-davedontols

./: .gitignore  README.md  analysis.py  central_dogma.py  main.py  pyproject.toml  visualization.py
data/: sample_sequences.csv
notebooks/: central_dogma_demo.ipynb
results/: analysis_results.csv
src/central_dogma/: __init__.py  __main__.py  analysis.py  cli.py  core.py  pipeline.py  visualization.py
